[fix]p5.jsをhtmlで読み込み

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>テトリス</title>
-    <script src="/src/main.js" type="module"></script>
 </head>
 <body>
     <h1>テトリス</h1>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.min.js"></script>
+    <script src="/src/main.js" type="module"></script>
+    
 </body>
 </html>
