--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>テトリス</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.min.js"></script>
-    <script src="/src/main.js" type="module"></script>
+    <script src="/src/main.js"></script>
     
 </body>
 </html>
