--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>テトリス</h1>
-    <p>QE:移動 AD:回転 S:高速落下 W:全消し</p>
+    <p>AD:移動 QE:回転 S:高速落下 W:全消し</p>
     <p></p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.min.js"></script>
     <script src="/src/main.js"></script>
